# rust-x-arduino

./: Cargo.toml  README.md  diagram.json  ravedude.toml  wokwi.toml
src/: lib.rs  main.rs  screen.rs  screen_format.rs  servo.rs
src/echo/: mod.rs
src/infrared/: ir_clock.rs  mod.rs
src/interrupts/: mod.rs
src/movement/: counters.rs  engine.rs  mod.rs  movement.rs
src/timing/: millis.rs  mod.rs  pwm.rs
