[package]
name = "rust-x-arduino"
version = "0.1.0"
authors = ["junsevith <pawelstanik44@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-x-arduino"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"


port-expander = "0.6.4"
ag-lcd = {version = "0.3.0", features = ["i2c"]}

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
